use more java 9+ methods