@@ -17,7 +17,7 @@ public final class HexUtils {
     private static final int CHARS_UNTIL_LOOP = 30;
     private static final Pattern RAINBOW_PATTERN = Pattern.compile("<(?<type>rainbow|r)(#(?<speed>\\d+))?(:(?<saturation>\\d*\\.?\\d+))?(:(?<brightness>\\d*\\.?\\d+))?(:(?<loop>l|L|loop))?>");
     private static final Pattern GRADIENT_PATTERN = Pattern.compile("<(?<type>gradient|g)(#(?<speed>\\d+))?(?<hex>(:#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})){2,})(:(?<loop>l|L|loop))?>");
-    private static final List<Pattern> HEX_PATTERNS = Arrays.asList(
+    private static final List<Pattern> HEX_PATTERNS = List.of(
             Pattern.compile("<#([A-Fa-f0-9]){6}>"),   // <#FFFFFF>
             Pattern.compile("\\{#([A-Fa-f0-9]){6}}"), // {#FFFFFF}
             Pattern.compile("&#([A-Fa-f0-9]){6}"),    // &#FFFFFF
@@ -52,16 +52,6 @@ public final class HexUtils {
         } catch (IllegalStateException | IllegalArgumentException e) {
             return null;
         }
-    }
-
-    /**
-     * Sends a CommandSender a colored message
-     *
-     * @param sender  The CommandSender to send to
-     * @param message The message to send
-     */
-    public static void sendMessage(CommandSender sender, String message) {
-        sender.sendMessage(colorify(message));
     }
 
     /**
